# cpp_example_project

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_hello_world.cpp
